minor doc changes